server/sonar-web/src/main/less/style.less
/* ... */
.tablinks a {
  text-decoration: underline;
  color: #777;
  font-size: 85%;
}

.tabs-panel {
  border-right: 1px solid #DDD;
  border-bottom: 1px solid #DDD;
  border-left: 1px solid #DDD;
  border-top-width: 0;
  padding: 10px;
}

/* tabs2 is deprecated since 4.1. It is kept for backward-compatibility */
.tabs2, .tabs {
  height: 20px;
  border-bottom: 1px solid #DDD;
  margin: 0;
  padding: 0;
  font-size: 93%;
}

.tabs2 li, .tabs li {
  display: inline;
  list-style-type: none;
  font-weight: normal;
  color: #777;
  vertical-align: baseline;
  white-space: nowrap;
  margin: 0;
  border: 0;
  padding: 0;
}

.tabs2 li a, .tabs li a {
  float: left;
  color: #777;
  vertical-align: bottom;
  height: 17px;
  margin: 0 1px 0 0;
  padding: 1px 5px;
  .link-no-underline;
}

.tabs2 li a.selected, .tabs li a.selected, .tabs .ui-tabs-active a {
  text-decoration: none;
  color: #555 !important;
  font-weight: bold;
  margin: 0 1px 0 0;
}

.tabbed {
  border: 1px solid silver;
  border-top: 0;
  padding: 5px;
}
.comments {
  color: #777;
  font-size: 12px;
  margin-bottom: 10px;
  padding: 4px;
}

.little {
  font-size: 80%;
}

.tooltip {
  position: absolute;
  background-color: #CAE3F2;
  border: 1px solid #4b9fd5;
  max-width: 480px;
  text-align: left;
  color: #262626;
}

.tooltip .content {
  color: #111;
  padding: 4px;
}

.tooltip .title {
  color: #111;
  font-weight: bold;
  font-size: 100%;
  padding: 2px 4px;
}

.tooltip td {
  margin: 0;
  padding: 2px;
}

.tooltip p {
  margin: 0;
  padding: 0;
}

.alert_WARN {
  background-color: @orange;
  color: #fff;
  margin: 0;
  padding: 0 3px;

  a > & {
    margin-bottom: -1px;
    border-bottom: 1px solid @orange;
    .trans;

    &:hover { opacity: 0.8; }
  }
}

.alert_ERROR {
  background-color: @red;
  color: #fff;
  margin: 0;
  padding: 0 3px;

  a > & {
    margin-bottom: -1px;
    border-bottom: 1px solid @red;
    .trans;

    &:hover { opacity: 0.8; }
  }
}

#comparison span.best {
  font-size: 108%;
  font-weight: bold;
}

.gwt-TabBar {
  font-size: 93%;
  width: 100%;
  border-bottom: 1px solid #cdcdcd;
}

.gwt-TabBarFirst {
  width: 0;
}

.gwt-TabBar .gwt-TabBarItem {
  cursor: pointer;
  font-weight: normal;
  text-decoration: underline;
  color: #555;
  background-color: #EFEFEF;
  vertical-align: middle;
  white-space: nowrap;
  padding: 0.3em 0.6em;
  border: 1px solid #cdcdcd;
  border-bottom: none;
  border-radius: 4px 4px 0 0;
  -moz-border-radius: 4px 4px 0 0;
  -webkit-border-radius: 4px 4px 0 0;
}

.gwt-TabBar .gwt-TabBarItem-wrapper {
  padding: 0 0 0 1px;
}

.gwt-TabBar .gwt-TabBarItem-selected {
  cursor: default;
  font-weight: bold;
  text-decoration: underline;
  color: #efefef;
  background-color: #4B9FD5;
  border-bottom: none;
  vertical-align: middle;
  white-space: nowrap;
  padding: 0.3em 0.6em;
}

.gwt-TabPanelBottom {
  width: 100%;
}

.markdown-tips {
  font-size: @smallFontSize;
  color: @secondFontColor;
}


/* API for Rule and Property Descriptions  */
.rule-desc h2 {
  margin-top: 16px;
  font-size: 16px;
  line-height: 1.5;
  color: @baseFontColor;
}

.rule-desc h3 {
  margin-top: 16px;
  font-size: 12px;
  line-height: 1.5;
  color: @baseFontColor;
  font-weight: bold;
}

.rule-desc p, .property p {
  margin-top: 10px;
}

.rule-desc pre, .property pre, .bubble-popup pre, .coding-rules-detail-parameter pre {
  margin: 10px 0 !important;
  padding: 10px !important;
  border: 1px dashed #aaa;
  font-size: 12px;
  font-family: monospace;;
}

.rule-desc blockquote, .property blockquote, .bubble-popup blockquote, .coding-rules-detail-parameter blockquote {
  margin-top: 10px;
  padding: 10px;
}

.rule-desc ul, .property ul {
  list-style-type: disc;
  list-style-position: inside;
  margin: 10px;
}

.rule-desc ol, .property ol {
  list-style-type: decimal;
  list-style-position: inside;
  margin: 10px;
}

.rule-table {
  margin-top: 10px;
  overflow-x: auto;
  border-collapse: collapse;
}
.rule-table th {
  background: none no-repeat scroll right center #EFEFEF;
  border: 1px solid #DDD;
  padding: 5px 10px;
  font-weight: bold;
}
.rule-table td {
  background: none no-repeat scroll right center transparent;
  border: 1px solid #DDD;
  padding: 5px 10px;
}
/* End of API for Rule Descriptions */



.tip:hover {
  background: #FFF;
  position: relative;
  z-index: 100;
}

.tip span {
  display: none;
  margin-left: -20px;
  padding: 4px 5px;
}

.tip:hover span {
  display: inline;
  position: absolute;
  background: #CAE3F2;
  border: 1px solid #4b9fd5;
  color: #262626;
  white-space: nowrap;
  text-decoration: none;
}

.hbar {
  float: left;
  border: none;
  clear: both;
  width: 4em;
  margin: 0;
  padding: 2px 0 0;
}

.hbar li {
  background-color: #777;
  color: #FFF;
  font-family: Verdana, Tahoma, Arial, sans-serif;
  font-size: xx-small;
  letter-spacing: -0.075em;
  list-style: none;
  line-height: 1.1em;
  text-align: right;
  vertical-align: middle;
  padding: 0.1em;
}

div.barchart {
  border: 0;
  margin: 0;
  padding: 0;
  float: left;
}

div.barchart > div {
  background-color: @darkBlue;
  height: 0.9em;
}

table.matrix thead {
  background-color: #CAE3F2;
  border: 1px solid #4b9fd5;
}

table.matrix thead th {
  text-align: right;
  border-right: 1px solid #4b9fd5;
  padding: 4px 5px;
}

table.matrix tbody td {
  border: 1px solid #ddd;
  margin: 0;
  padding: 4px 5px;
}

table.matrix tbody td.title {
  border: none;
  font-weight: bold;
  margin: 0;
  padding: 5px 0 0 5px;
}

a.nolink {
  .link-no-underline;
}

h1 strong, .dashbox .title, .gwt-SourcePanel .sources .msg li strong {
  font-weight: bold;
}

h4 a, h4 a:visited, .gray {
  color: #777;
}

.even, table.sortable tr.rowodd {
  background-color: #f5f5f5;
}

.bordered {
  border-bottom: 1px solid #ddd;
}

table.data, table.spaced, .gwt-SourcePanel .sources {
  width: 100%;
}

table.data td.barchart {
  width: 100px;
}

table.without-header {
  border-top: 1px solid #ddd;
}

.hoverable.selected a {
  color: #fff;
}
/* ... */

